@@ -120,6 +120,8 @@ static const decode_table_t oDecodeTable[] =
   { "DCFS", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = c_dcfs } }, /* DCFS / DCFSU */
   { "DCI", DTABLE_CALLBACK_VOID, { .vd = c_dci } }, /* DCI */
   { "DCW", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = c_dcw } }, /* DCW / DCWU */
+  { "DMB", DTABLE_CALLBACK_VOID, { .vd = m_dmb } }, /* DMB */
+  { "DSB", DTABLE_CALLBACK_VOID, { .vd = m_dsb } }, /* DSB */
   { "DVF", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_dvf } }, /* DVF CC P R */
   { "ELIF", DTABLE_CALLBACK_NOLEX, { .nolex = c_elif } }, /* ELIF */
   { "ELSE", DTABLE_CALLBACK_NOLEX, { .nolex = c_else } }, /* | ELSE */
@@ -148,6 +150,7 @@ static const decode_table_t oDecodeTable[] =
   { "INCBIN", DTABLE_CALLBACK_VOID, { .vd = c_incbin } }, /* INCBIN */
   { "INCLUDE", DTABLE_CALLBACK_VOID, { .vd = c_get } }, /* GET / INCLUDE */
   { "INFO", DTABLE_CALLBACK_VOID, { .vd = c_info } }, /* INFO */
+  { "ISB", DTABLE_CALLBACK_VOID, { .vd = m_isb } }, /* ISB */
   { "KEEP", DTABLE_CALLBACK_VOID, { .vd = c_keep } }, /* KEEP */
   { "LCL", DTABLE_CALLBACK_NOLEX | DTABLE_PART_MNEMONIC, { .nolex = c_lcl } }, /* LCLA, LCLL, LCLS */
   { "LDC", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_ldc } }, /* LDC CC L */
