@@ -37,6 +37,8 @@ extern int num_predefines;
 void inputInit (const char *infile);
 
 bool Input_Match (char c, bool spacesToo);
+bool Input_MatchKeyword (const char *keyword);
+bool Input_MatchKeywordLower (const char *keyword);
 
 #if DEBUG
 const char *inputGiveRestLine (void);
